--- a/configure.ac
+++ b/configure.ac
@@ -85,8 +85,6 @@ AM_CONDITIONAL([HAVE_PCI_PCI_H], [test "x$have_pci_pci_h" = "xyes"])
 CPPFLAGS="$SAVED_CPPFLAGS $XORG_CFLAGS"
 CFLAGS="$SAVED_CFLAGS"
 
-AC_DEFINE(USE_XAA, 1, [Build support for XAA])
-
 # basic exa check.
 AC_MSG_CHECKING([whether to enable EXA support])
 if test "x$EXA" = xyes; then
@@ -114,6 +112,8 @@ if test "x$have_exa_h" = xyes; then
                 AC_DEFINE(USE_EXA, 1, [Build support for Exa])
         fi
 fi
+
+USE_EXA=no
 
 AM_CONDITIONAL(USE_EXA, test "x$USE_EXA" = xyes)
 
