--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -66,7 +66,10 @@ radeonhd_drv_la_SOURCES = \
 	r5xx_xaa.c \
 	r5xx_regs.h \
 	r5xx_3dregs.h \
-	radeon_3d.c
+	radeon_3d.c \
+	rhd_video.c \
+	rhd_video.h \
+	radeon_textured_videofuncs.c
 
 nodist_radeonhd_drv_la_SOURCES = \
 	git_version.h
