R6xx/R7xx: Add initial EXA/Xv support
First pass at r6xx/r7xx EXA and Xv support.  This release
is mostly targeted at developers as the code is not really
ready for regular users.

Current status:
- lack of direction blitter makes overlapping copy blits difficult.
current code breaks down overlapping blits into line by line
blits of non-overlapping regions.  running xcompmgr -a is highly
recommended.
- a8 solids have issues
- planar Xv shader implemented, but not working properly yet
- missing Xv shader support for packed formats.  should be easy to
adapt the planar Xv shader once that is working
- composite mask support is currently broken.  I suspect the interpolater
setup.
- depth 16 is untested

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -84,7 +84,7 @@ nodist_radeonhd_drv_la_SOURCES = \
 	git_version.h
 
 if USE_EXA
-radeonhd_drv_la_SOURCES += r5xx_exa.c radeon_exa_render.c
+radeonhd_drv_la_SOURCES += r5xx_exa.c radeon_exa_render.c r6xx_accel.c r600_exa.c r600_textured_videofuncs.c
 endif
 
 if USE_DRI
