--- a/configure.ac
+++ b/configure.ac
@@ -51,19 +51,19 @@ AH_BOTTOM([#endif])
 
 AC_ARG_WITH(xorg-module-dir,
             AC_HELP_STRING([--with-xorg-module-dir=DIR],
-                           [Default xorg module directory [[default=$libdir/xorg/modules]]]),
+                           [Default xorg module directory (default $libdir/xorg/modules)]),
             [moduledir="$withval"],
             [moduledir="$libdir/xorg/modules"])
 
 AC_ARG_ENABLE(exa,
               AC_HELP_STRING([--disable-exa],
-	                     [Disable EXA support [[default enabled]]]),
+	                     [Disable EXA support (default enabled)]),
               [EXA="$enableval"],
               [EXA=yes])
 
 AC_ARG_ENABLE(dri,
               AC_HELP_STRING([--disable-dri],
-	                     [Disable DRI support [[default enabled]]]),
+	                     [Disable DRI support (default enabled)]),
               [DRI="$enableval"],
               [DRI=yes])
 
