--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -149,8 +149,7 @@ if HAVE_SED_WITH_REASONABLE_SUBSTITUTION
 SRCMAN = $(top_srcdir)/man/radeonhd.man
 CLEANFILES += radeonhd.man.new
 radeonhd.man.new: rhd_id.c $(SRCMAN)
-	echo "Generating radeon.man.new..."; \
-	(	$(SED) -n '1,/^\.\\" START_DEVICE_LIST marker - do not delete/p' "$(SRCMAN)"; \
+	$(Q)(	$(SED) -n '1,/^\.\\" START_DEVICE_LIST marker - do not delete/p' "$(SRCMAN)"; \
 		$(SED)	-e '1,/^[ 	]*\/\* START_DEVICE_LIST marker - do not delete \*\/ *$$/d' \
 			-e '/^[ 	]*\/\* END_DEVICE_LIST marker - do not delete \*\/ *$$/,$$d' \
 			-e '/^[ 	]\{1,\}xf86Msg(X_NONE,/d' \
@@ -165,8 +164,7 @@ radeonhd.man.new: rhd_id.c $(SRCMAN)
 SRCREADME = $(top_srcdir)/README
 CLEANFILES += README.new
 README.new: rhd_id.c $(top_srcdir)/README
-	echo "Generating README.new..."; \
-	(	$(SED) -n '1,/^BEGIN_DEVICE_LIST$$/p' "$(SRCREADME)"; \
+	$(Q)(	$(SED) -n '1,/^BEGIN_DEVICE_LIST$$/p' "$(SRCREADME)"; \
 		$(SED)	-e '1,/^[ 	]*\/\* START_DEVICE_LIST marker - do not delete \*\/ *$$/d' \
 			-e '/^[ 	]*\/\* END_DEVICE_LIST marker - do not delete \*\/ *$$/,$$d' \
 			-e '/^[ 	]\{1,\}xf86Msg(X_NONE,/d' \
@@ -183,13 +181,13 @@ README.new: rhd_id.c $(top_srcdir)/README
 all-local: radeonhd.man.new README.new
 	@changed=""; \
 	if diff -u "$(SRCMAN)" radeonhd.man.new; then \
-		echo "radeon(4) man page is current."; \
+		if test "x$(Q)" = "x@"; then :; else echo "radeon(4) man page is current."; fi \
 	else \
                 changed="$$changed $(SRCMAN)"; \
 		mv -f radeonhd.man.new "$(SRCMAN)"; \
 	fi; \
 	if diff -u "$(SRCREADME)" README.new; then \
-		echo "README file is current."; \
+		if test "x$(Q)" = "x@"; then :; else echo "README file is current."; fi \
 	else \
                 changed="$$changed $(SRCREADME)"; \
 		mv -f README.new "$(SRCREADME)"; \
