--- a/configure.ac
+++ b/configure.ac
@@ -174,6 +174,12 @@ AC_MSG_RESULT($USE_DRI)
 test "x$USE_DRI" = xyes && AC_DEFINE(USE_DRI, 1, [Build support for DRI])
 AM_CONDITIONAL(USE_DRI, test "x$USE_DRI" = xyes)
 
+if test "x$USER_DRI" = "xyes"; then
+	AC_CHECK_HEADER([xf86drmMode.h],
+			[AC_DEFINE([HAVE_XF86DRMMODE_H], [1],
+				[Define to 1 if you have xf86drmMode.h])])
+fi
+
 AC_CHECK_FILE([${sdkdir}/damage.h],
 	[AC_DEFINE(DAMAGE,1,[Use Damage extension])], [])
 
